<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitethree"
    tools:context=".Biodata">

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/str_nama"
        android:textSize="24sp"
        android:textColor="@color/black3"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nama"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:hint="@string/str_hint_nama"
        android:inputType="text"
        android:maxLength="30"
        android:fontFamily="@font/rubik_regular"
        android:backgroundTint="@color/coolgrey"
        />

    <TextView
        android:id="@+id/umur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtnama"
        android:layout_marginTop="16dp"
        android:layout_marginRight="26dp"
        android:layout_marginLeft="26dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/str_umur"
        android:textSize="24sp"
        android:textColor="@color/black3"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtumur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/umur"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:hint="@string/str_hint_umur"
        android:inputType="number"
        android:maxLength="4"
        android:fontFamily="@font/rubik_regular"
        android:backgroundTint="@color/coolgrey" />

    <Button
        android:id="@+id/btnselanjutnya"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button_kuning"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/str_selanjutnya"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>